changes in logout and upload image
