# src/routes/auth.routes.ts
@@ -167,6 +167,27 @@ router.post(
 );
 
 router.post(
+  "/logout",
+
+  /*  #swagger.tags = ['1.Auth']
+      #swagger.summary = 'User Logout'
+      #swagger.description = 'Logout authenticated user'
+
+      
+
+      #swagger.responses[200] = {
+        description: 'Logout Successful',
+        schema: {
+          success: 1,
+          message: 'Logout successful'
+        }
+      }
+  */
+
+  AuthController.logout,
+);
+
+router.post(
   "/reset-password",
   /*  #swagger.tags = ['1.Auth']
       #swagger.summary = 'Password Updated successfully'
@@ -224,5 +245,7 @@ router.post(
   */
   AuthController.googleLogin,
 );
+
+
 
 export default router;
